--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="logo">
                     <img src="images/logo.svg" alt="snap logo">
                 </div>
-                <ul class="nav-links">
+                <ul class="navigation">
                     <li class="dropdown">
                         <a href="#">Features</a>
                         <div class="dropdown-content">
